# 6403gulinskayaii

./: .gitignore  README.md  otchet_6403_GulinskayaII.docx  pyproject.toml
ImageProcessing/implementation/: image_processing.py
cat_app/: __init__.py  __main__.py  cat_image_interface.py  cat_image_processor.py
cat_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cat_app/ImageProcessing/: Pipfile  README.md  api_testing.py  main.py  run.py
cat_app/ImageProcessing/implementation/: image_processing.py
cat_app/ImageProcessing/interfaces/: i_image_processing.py
cat_app/logs/: logging_config.py
cat_app/tests/: test_cat_image.py  test_cat_image_processor.py
lab1/ImageProcessing/: main.py
lab1/ImageProcessing/interfaces/: i_image_processing.py
lab2/: requirements.txt
lab2/ImageProcessing/: api_testing.py  main.py
lab2/ImageProcessing/implementation/: image_processing.py
lab2/ImageProcessing/interfaces/: i_image_processing.py
lab3/: 1_implementation.py
lab4/ImageProcessing/: api_testing.py  main.py
lab4/ImageProcessing/implementation/: cat_image_processor.py  image_processing.py
lab4/ImageProcessing/interfaces/: __init__.py  cat_image_interface.py
